# task-pri-lite

./: .env.example  .eslintignore  .eslintrc.js  .gitignore  README.md  eslint.config.js  jest.config.js  package-lock.json  package.json  setup.sh  tsconfig.json
docs/: README.md  prd.md  (+15 more)
exporters/: .env.example  .gitignore  Makefile  pyproject.toml
exporters/docs/: calendar-integration-impl.md  updated-code.md
exporters/docs/gcal-filtering/: analysis.md  comprehensive_analysis.md  langchain_claude_implementation.py  output_json_structure.md  summary_report.md
exporters/docs/todoist-filtering/: conceptual_implementation.py  filtering_criteria_summary.md  final_analysis.md  langchain_claude_implementation.md  output_structure_details.md
exporters/schemas/: calendar_schema.json  label_schema.json  task_schema.json
exporters/src/google_calendar_exporter/: auth.py  exporter.py  main.py  models.py  output_formatter.py  protocols.py
exporters/src/google_calendar_exporter/factories/: __init__.py  exporter_factory.py
exporters/src/google_calendar_exporter/filters/: README.md  __init__.py  claude_event_filter.py
exporters/src/google_calendar_exporter/formatters/: __init__.py  event_formatter.py  planning_formatter.py  schema_validator.py
exporters/src/google_calendar_exporter/models/: event.py  filtered_event.py
exporters/src/planning_data_exporter/: cli.py  schema_validator.py
exporters/src/todoist_data_exporter/: __init__.py  cli.py
exporters/src/todoist_data_exporter/application/: factory.py  services.py
exporters/src/todoist_data_exporter/application/exporters/: __init__.py  csv_exporter.py  exporter.py  schema_validator.py
exporters/src/todoist_data_exporter/models/: __init__.py  comment.py
exporters/tests/: test_cli.py  test_cli_project_id.py  test_export_service.py  test_exporters.py  test_factory.py
exporters/tests/unit/: test_formatters.py
(+186 files in other folders)
